# bat-markets

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  blueprint.md
.github/workflows/: ci.yml  source-release.yml
crates/bat-markets/: Cargo.toml
crates/bat-markets-binance/: Cargo.toml
crates/bat-markets-binance/src/: lib.rs  native.rs
crates/bat-markets-bybit/: Cargo.toml
crates/bat-markets-bybit/src/: lib.rs  native.rs
crates/bat-markets-core/: Cargo.toml
crates/bat-markets-core/src/: account.rs  adapter.rs  auth.rs  capability.rs  catalog.rs  command.rs  config.rs  error.rs  execution.rs  health.rs  ids.rs  instrument.rs  lib.rs  market.rs  numeric.rs  position.rs  primitives.rs  reconcile.rs  state.rs  trade.rs  types.rs
crates/bat-markets-testing/: Cargo.toml
crates/bat-markets-testing/benches/: engine.rs
crates/bat-markets-testing/src/: lib.rs
crates/bat-markets-testing/tests/: binance_demo_stress.rs  mainnet_readonly.rs  ohlcv_stress.rs  sandbox_live.rs  stress_paths.rs
crates/bat-markets/examples/: binance_fixture_walkthrough.rs  bybit_fixture_walkthrough.rs  ohlcv_public_probe.rs  public_surface_probe.rs
crates/bat-markets/src/: account.rs  capabilities.rs  client.rs  config.rs  diagnostics.rs  errors.rs  health.rs  lib.rs  market.rs  native.rs  position.rs  runtime.rs  stream.rs  trade.rs  types.rs
docs/: architecture.md  capability-matrix.md  error-model.md  release.md  roadmap.md
docs/adr/: 0001-project-shape.md  0002-api-layers-and-lanes.md  0003-engine-first-foundation.md  0004-live-transport-and-reconcile.md  0005-sequence-aware-transport-maintenance.md  0006-github-source-release-model.md
fixtures/binance/: command_create_ok.json  command_leverage_ok.json  command_margin_mode_ok.json  command_reject.json  open_interest.json  order_history.json  private_account_update.json  private_order_trade_update.json  public_book_ticker.json  public_kline.json  public_mark_price.json  public_ticker.json  public_trade.json  user_trades.json
fixtures/bybit/: command_create_ok.json  command_reject.json  execution_history.json  order_history.json  private_execution.json  private_execution_late_after_cancel.json  private_order.json  private_order_canceled.json  private_position.json  private_wallet.json  public_kline.json  public_orderbook.json  public_orderbook_gap.json  public_ticker.json  public_trade.json
scripts/: check.sh  source-release.sh
