[workspace]
members = [
    "crates/bat-markets",
    "crates/bat-markets-binance",
    "crates/bat-markets-bybit",
    "crates/bat-markets-core",
    "crates/bat-markets-testing",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["bat-markets maintainers"]
homepage = "https://github.com/bat-markets/bat-markets"
repository = "https://github.com/bat-markets/bat-markets"
rust-version = "1.94"

[workspace.dependencies]
async-trait = "0.1"
hex = "0.4"
hmac = "0.12"
parking_lot = "0.12"
proptest = "1"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots", "url"] }
url = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
undocumented_unsafe_blocks = "deny"
