[package]
name = "bat-markets-binance"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Binance USD-M linear futures adapter for bat-markets"
publish = false

[dependencies]
bat-markets-core = { path = "../bat-markets-core", version = "0.1.0" }
parking_lot.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
