[package]
name = "bat-markets"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Futures-first headless Rust exchange engine with honest Binance/Bybit linear futures support"
readme = "../../README.md"
keywords = ["exchange", "futures", "binance", "bybit", "trading"]
categories = ["api-bindings", "finance", "asynchronous"]

[features]
default = ["binance", "bybit", "private-trading"]
binance = ["dep:bat-markets-binance"]
bybit = ["dep:bat-markets-bybit"]
private-trading = []
metrics = []
serde = []

[dependencies]
bat-markets-binance = { path = "../bat-markets-binance", version = "0.1.0", optional = true }
bat-markets-bybit = { path = "../bat-markets-bybit", version = "0.1.0", optional = true }
bat-markets-core = { path = "../bat-markets-core", version = "0.1.0" }
futures-util.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
bat-markets-testing = { path = "../bat-markets-testing", version = "0.1.0" }

[lints]
workspace = true
